--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Page title</title>
-    <link rel="stylesheet" href="./sass/index.scss" />
-    <script type="module" src="./index.js"></script>
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <form class="search-form" id="search-form">
@@ -18,6 +17,9 @@
       <button type="submit">Search</button>
     </form>
     <div class="gallery"></div>
-    <button type="button" class="more is-hidden">Load more</button>
+    <button class="btn-up visually-hidden" type="button">⭡</button>
+    <div class="js-guard"></div>
+    <span class="loader visually-hidden"></span>
+    <script type="module" src="./index.js"></script>
   </body>
 </html>
